--- a/main.html
+++ b/main.html
@@ -9,11 +9,25 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
-			
-		}
+            if (arr.length === 0) {
+                return -Infinity;
+            }
 
-		function Main() {
+            let max = arr[0];
+            let secondMax = -Infinity;
+
+            for (let i = 1; i < arr.length; i++) {
+                if (arr[i] > max) {
+                    secondMax = max;
+                    max = arr[i];
+                } else if (arr[i] > secondMax && arr[i] !== max) {
+                    secondMax = arr[i];
+                }
+            }
+
+            return secondMax;
+        }
+{
 			var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
